corrections to introduction and some typos fixed

--- a/chapter_conclusions.tex
+++ b/chapter_conclusions.tex
@@ -1,4 +1,15 @@
-\chapter{Conclusions}
+\chapter{Conclusions and outlook}
 \sloppy
-\section{Summary of work}
-\section{Outlook}
+In this thesis we ellucidated the ``negative\--outside'' rule.
+Additionally we have made observations regarding how anchoring \gls{tmh}s are optimised to their membranes.
+This new insight into the bahviour of \gls{tmh}s will not only help us understand specific case in biology, but can also inform synthetic biology regarding \gls{tmp}s.
+
+With respect to \gls{ta} \gls{tmp}s, we found differences between the mitochondrial and secretory dedtermined \gls{tmh}s.
+We found alanine is used more commonly in the mitochondrial \gls{tmh}s, perhaps even moreso than isoleucine and leucine.
+We also observed a reversal of the positive\--inside negative\--outside distributions of charged residues.
+This re\--emphasises the notion that there is more to \gls{ta} protein trafficking than the hydrophobicity of the \gls{tmh} alone, and could inform more specific studies of individual proteins.
+%\gls{ta} proteins in drug delivery
+However, in order to reach more thorough conclusions at a molecular level, more annotation is needed in the databases regarding chaperone interactions, and a more precise terminology of what constitutes a post translationally inserted \gls{ta} protein.
+
+Understanding cooperative \gls{tmh} insertion and the integration of marginally hydrophobic \gls{tmh}s will require a much more thorough understanding of the temporal aspects of the process. %EM and appears
+However, understanding the relationship \gls{tmh}s have with one another is critical for developing complex synthetic \gls{tmp}s.
