--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -1,4 +1,4 @@
-\chapter{Sequence analysis of polarity in transmembrane helices suggests that translocation of marginally hydrophobic helices could be facilitated by neighbouring typically hydrophobic helices.}
+\chapter{Sequence analysis of polarity in transmembrane helices suggests that translocation of marginally hydrophobic helices could be facilitated by neighbouring typically hydrophobic helices}
 \chaptermark{Sequence analysis of polarity...}
 \section{Abstract}
 
