--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -1,4 +1,4 @@
-\chapter{Collation and analysis of tail-anchored protein transmembrane helices reveals subcellular variation in flanking charged residue distribution and the transmembrane helix core hydrophobicity.}
+\chapter{Collation and analysis of tail-anchored protein transmembrane helices reveals subcellular variation in flanking charged residue distribution and the transmembrane helix core hydrophobicity}
 \chaptermark{Collation and analysis of tail-anchored...}
 
 \sloppy
