--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1,4 +1,4 @@
-\chapter{The ``Negative-Outside'' rule.}
+\chapter{The ``negative-outside'' rule}
 \sloppy
 The description of a~\gls{tmh} remains incomplete.
 The understanding of~\gls{tmp} topology is erroneous, and despite a wealth of structures, the general model of helix-helix and helix-lipid interactions remains speculative and requires a great deal of intensive analysis to generate a working model of a particular~\gls{tmp}.
@@ -7,8 +7,6 @@ The work presented in this chapter is an expanded version of published work~\cit
 We use advanced statistical analysis to analyse large sequence datasets that have rich topological annotation.
 By analysing these sequences in the context of anchorage, we find that some~\gls{tmh}s are confined to biological constraints of the membrane, whereas others that likely contain function beyond anchorage, are less conforming to the membrane.
 Specifically, there is further elaboration of statistical definitions in the methods than in the published paper.
-
-\section{Abstract}
 
 \section{Summary}
 As the idea of positive residues inside the cytoplasm emerged during the late 1980s, so did the idea of negative residues working in concert with~\gls{tmh} orientation.
