--- a/thesis.tex
+++ b/thesis.tex
@@ -101,37 +101,39 @@ What is missing in the current literature is a nuanced contextualised understand
 By leveraging large data-sets of transmembrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
 In this thesis we present statistical evidence demonstrating the ``negative\--outside rule'' in opposition to the ``positive\--inside rule''.
-We identify different amino acid distributions in anchoring helices compared to transmembrane helices with function beyond anchoring that would allow anchors to stabilise more effectively in the membrane.
-We show adaptations of residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments as well as a 3D ampipathic arrangement of residues of spontaneously inserting transmembrane helices that may be responsible for their insertion.
+We identify different amino acid distributions in anchoring helices compared to transmembrane helices with function beyond anchoring that would allow anchroing transmembrane helices to stabilise more effectively in the membrane.
+We show adaptations of residue distributions through the transmembrane helices of tail\--anchored proteins to different membrane environments.
+Structural modeeling well as a 3D amphipathic arrangement of residues of spontaneously inserting transmembrane helices that may be responsible for their insertion.
 Finally, we find a conserved pattern of typically hydrophobic transmembrane helices neighbouring margainlly hydrophobic helices which may facilitate their insertion.
 
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
 
-The survival of each of our cells relies on a cellular barrier (the membrane) to separate themselves from the surrounding environment.
-The barrier works by being chemically very different from both the outside environment and the inside of the cell, which in both cases are mostly water.
-The membrane is fatty, and because of that, the membrane repels water.
+The survival of each of our cells relies on a cellular barrier (called the membrane) to separate themselves from the surrounding environment.
+The membrane works by being chemically very different from both the outside environment and the inside of the cell, which in both cases is mostly water.
+The membrane is fatty so repels water.
 
 Proteins are the molecular machinery that forms much of the cell structure and shape as well as carrying out many of the cell's routine tasks.
-Around a third of our genome codes for proteins that are permanently embedded in the membrane.
-But because these membrane\--proteins are adapted for a life in the water repelling cell membrane, they are very hard to study in laboratories which often rely on methods that hold proteins in water-based solutions.
+Around a third of our genome codes for membrane\--embedded proteins.
+But because these membrane\--proteins are adapted for a life in the water\--repelling cell membrane, they are very hard to study in laboratories which often rely on methods that hold proteins in water\--based solutions.
 
-In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin.
-
-%We computationally analysed thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants.
-%This is especially true for regions that specifically anchor the protein into the cellular wall.
-%Where the embedded regions have an additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
-
+In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling membrane.
 We computationally analysed the biochemical make\--up of thousands of proteins from openly available biological databases.
 
 This thesis demonstrates three features of membrane proteins:
 \begin{itemize}
-  \item the radically different evolutionary story that transmembrane regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optimisation through evolutionary timescales to adapt to the membrane as best they can.
-  \item these membrane embedded regions cooperate with one another to make sure the least stable, but functionally important, elements are correctly inserted into the membrane.
-  \item a distinct sub-group of membrane proteins that have a radically different membrane-insertion mechanism (tail-anchored proteins) have adaptations in their membrane regions depending on where they are in the cell.
+
+  \item the radically different evolutionary story that membrane\--bound regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optimisation through evolutionary timescales to adapt to the membrane as best they can.
+
+  \item a distinct sub\--group of membrane\--proteins that have a radically different membrane\--insertion mechanism (tail\--anchored proteins) have adaptations in their membrane regions depending on where they are located in the cell.
+
+  \item some types of membrane proteins may use several membrane elements to ensure the least stable, but functionally important, elements are correctly inserted into the membrane.
+
 \end{itemize}
 
-These findings will go on to inform more specific studies about membrane proteins and hopefully provide some insight to the workings of disease in which these membrane proteins are a cause or a drug target.
+These results will go on to inform more specific studies about membrane proteins.
+Hopefully, these findings will provide some insight into the workings of some genetic diseases as well as drug targets in the case of pathogenic infections and cancers.
+
 
 
  %But what is the point, what have we learned.
@@ -150,8 +152,8 @@ I would also like to thank The University of Manchester and the ARAP programme a
 Outside of the office I thank my mother, father, my brother Tim, and Emily for their unwavering support of me in undertaking a PhD based for two years on the otherside of the planet.
 Being so far from my family and loved ones was certainly the most challenging part of this process.
 
-It was my uncle Howard's wisdom and philosophical outlook that swayed me to undertake a PhD.
-May he rest in peace.
+%It was my uncle Howard's wisdom and philosophical outlook that swayed me to undertake a PhD.
+%May he rest in peace.
 
 % \prefacesection{The Author}
 
